# Telecom_Customer_Churn_Prediction

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
artifact/12_05_2025_15_10_45/data_ingestion/ingested/: test.csv  train.csv
artifact/12_05_2025_23_20_44/data_ingestion/feature_store/: Teleco_Customer_Churn.csv
artifact/12_05_2025_23_20_44/data_ingestion/ingested/: test.csv  train.csv
config/: schema.yaml
notebook/: Telecom_Churn_Prediction.ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
